AP-8004: Saving/loading nominal and numeric histogram data
- tried to use the code from the statistics node, doesn't work fully

AP-7546-data-explorer